<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_new_customer"
        android:iconTint="#402929"
        android:enabled="true"
        android:visible="true"
        app:showAsAction="always"
        android:title="@string/title_new_customer" />
    <item
        android:id="@+id/menu_broadcast_advertising"
        android:enabled="true"
        android:visible="true"
        app:showAsAction="always"
        android:title="@string/title_broadcast_advertising" />
    <item
        android:id="@+id/menu_help"
        android:enabled="true"
        android:visible="true"
        app:showAsAction="always"
        android:title="@string/title_help"
        />
</menu>