<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_logo_login" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_user_name" />

            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/title_input_login_name" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_login_password" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/title_input_login_password"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/chkSaveLoginInfor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_login_save_login_infor"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="233dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="do_login"
                    android:text="Login" />

                <ImageButton
                    android:id="@+id/btnExxit"
                    android:layout_width="221dp"
                    android:layout_height="47dp"
                    android:layout_weight="2"
                    android:onClick="do_exit"
                    app:srcCompat="@mipmap/ic_logo_exit" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>